Stop incorrectly notifying window watcher that a window is active when its focus controller is deactivated.  This was contributing to a crash because a window was set as active after it had been unregistered, leaving window watcher with a dangling pointer.  Bug 167233, r=danm, sr=alecf.